--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,24 @@
+data/
+.ipynb_checkpoints
+.bin
+*.db
+
+*.parquet
+*.html
+*.csv
+
+.venv
+venv
+.idea
+**/artifacts/
+**/models/
+
+__pycache__/
+**.env
+**.terraform/
+**.terraform.lock*
+**terraform.tfstate*
+
+
+.DS_Store
 **/output
